Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-17236

Disabling "Standard Buttons" toolbar in Explorer does not work correctly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.15
    • Shell
    • None

    Description

      If I disable the file explorer's standard buttons via view->toolbar standard buttons, it hides it, but the buttons are still there. They can be activated by hover and click.

      Attachments

        1. image-2024-06-25-21-12-17-513.png
          21 kB
          KRosUser
        2. image-2024-06-25-21-12-02-882.png
          13 kB
          KRosUser
        3. image-2024-06-25-21-11-51-825.png
          14 kB
          KRosUser
        4. image-2024-06-25-21-11-41-196.png
          23 kB
          KRosUser
        5. log-203-8-31-2020.txt
          40 kB
          Shadowblitz16
        6. image-2020-08-30-19-33-46-506.png
          178 kB
          Shadowblitz16
        7. image-2020-08-30-19-33-24-858.png
          184 kB
          Shadowblitz16
        8. image-2020-08-30-19-32-51-204.png
          187 kB
          Shadowblitz16

        Issue Links

          Activity

            People

              whindsaks whindsaks
              Shadowblitz16 Shadowblitz16
              Votes:
              6 Vote for this issue
              Watchers:
              9 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: