dll/win32/browseui/internettoolbar.h
@@ -20,6 +20,10 @@
 
 #pragma once
 
+#define ITBARSTREAM_SHELLBROWSER 0
+#define ITBARSTREAM_WEBBROWSER 1
+#define ITBARSTREAM_EXPLORER 2
+
 static const int gSearchCommandID = 1003;
 static const int gFoldersCommandID = 1004;
 static const int gMoveToCommandID = FCIDM_SHVIEW_MOVETO;
@@ -93,6 +97,7 @@ public:
     POINT                                   fStartPosition;
     LONG                                    fStartHeight;
     ShellSettings                           *pSettings;
+    BOOL                                    fIgnoreChanges;
 public:
     CInternetToolbar();
     virtual ~CInternetToolbar();
@@ -104,9 +109,13 @@ public:
     HRESULT CommandStateChanged(bool newValue, int commandID);
     HRESULT CreateAndInitBandProxy();
     HRESULT IsBandVisible(int BandID);
+    HRESULT SetBandVisibility(int BandID, int Show);
     HRESULT ToggleBandVisibility(int BandID);
     HRESULT SetState(const GUID *pguidCmdGroup, long commandID, OLECMD* pcmd);
     void RefreshLockedToolbarState();
+    HRESULT SetDirty();
+
+    static HRESULT GetStream(UINT StreamFor, DWORD Stgm, IStream **ppS);
 
 public:
     // *** IInputObject specific methods ***
